Added 2 player or 1 player capabilities

--- a/0812/javascript-browser-game-tic-tac-toe-lab/style.css
+++ b/0812/javascript-browser-game-tic-tac-toe-lab/style.css
@@ -26,3 +26,11 @@ body {
   font-size: 30px;
   text-align: center;
 }
+
+#bot {
+  width: 10%;
+  aspect-ratio: 2/1;
+  border: 3px solid black;
+  font-size: 30px;
+  text-align: center;
+}
