--- a/0812/javascript-browser-game-tic-tac-toe-lab/style.css
+++ b/0812/javascript-browser-game-tic-tac-toe-lab/style.css
@@ -24,19 +24,11 @@ body {
   text-align: center;
 }
 
-#reset {
-  margin-top: 20px;
+.txt {
+  margin-top: 10px;
   width: 10%;
-  aspect-ratio: 2/1;
   border: 3px solid black;
   font-size: 30px;
   text-align: center;
-}
-
-#bot {
-  width: 10%;
-  aspect-ratio: 2/1;
-  border: 3px solid black;
-  font-size: 30px;
-  text-align: center;
+  position: relative;
 }
