--- a/0813/flexbox-lab/style.css
+++ b/0813/flexbox-lab/style.css
@@ -53,6 +53,12 @@ input {
 main {
   background-color: white;
   padding: 32px 72px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 nav button {
@@ -73,6 +79,8 @@ nav button {
 
 .card-footer {
   font-size: 14px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .card-footer * {
